<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_new_collection">New Collection</string>
    <string name="action_search">"Search"</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">myHoard</string>
    <string name="collection_add">ADD COLLECTION</string>
    <string name="collection_description">Description:</string>
    <string name="collection_name">Collection name:</string>
    <string name="Email">E-MAIL</string>
    <string name="hello_world">Hello world!</string>
    <string name="Login">Login</string>
    <string name="Log_in">Log in</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="noentries">Add a new collection in the upper right corner</string>
    <string name="Password">PASSWORD</string>
    <string name="password_information">Password must contain at least 4 characters</string>
    <string name="Register">Register</string>
    <string name="Registration_form">Registration form</string>
    <string name="Registration_link">New to myHoard? Register here</string>
    <string name="registration_successfully">Registration successfully</string>
    <string name="Remember_me">Remember me</string>
    <string name="required_name_collection">Required collection name</string>
    <string name="terms_of_use">terms of use</string>
    <string name="title_activity_log">Log</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_image_processing">Filters</string>
    <string name="collection_edit">EDIT COLLECTION</string>
    <string name="collection_edited">COLLECTION EDITED</string>
    <string name="camera_picker">Camera</string>
    <string name="gallery_picker">Gallery</string>
    <string name="element_name">Name:</string>
    <string name="element_description">Description:</string>
    <string name="element_photo">Photo:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="element_edited">ELEMENT EDITED</string>
    <string name="required_name_element">Required element name</string>
    <string name="required_name_element_minimum_length">Element name must contain at least two characters</string>
    <string name="element_exist">Element with this name exists</string>
    <string name="name_already_exist">NAME ALREADY EXIST</string>
    <string name="delete_colection_dialog_title">DELETE COLLECTION</string>
    <string name="delete_colection_dialog_message">Are you sure you want to delete collection?</string>
    <string name="edit_colection_dialog_title">DELETE ELEMENT</string>
    <string name="edit_colection_dialog_message">Are you sure you want to delete element?</string>
    <string name="collection_tags">Tags:</string>
    <string name="select_tag_to_add">Select tag to add</string>
    <string name="select_tag_to_delete">Select tag to DELETE</string>
    <string name="email_blank">Field cannot be blank</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="incoreect_login">incorrect login</string>
    <string name="wrong_password">wrong password</string>
    <string name="noItems">This collection is empty.</string>
    <string name="title_items_activity">ItemsActivity</string>
    <string name="action_acra">Error! Please send message to Android group!</string>
    <string name="accept">Accept</string>
    <string name="new_collection">New collection</string>
    <string name="collection_type">Type:</string>
    <string name="collection_type_upper_case">TYPE:</string>
    <string name="action_camera">Camera</string>
    <string name="action_new_element">New Element</string>
    <string name="offline">offline</string>
    <string name="action_sort_by_name">Sort by Name</string>
    <string name="action_sort_by_date">Sort by Date</string>
    <string name="sort">Sort</string>
    <string name="first_collection_button_description">Empty image with plus</string>
    <string name="first_collection_image_description">Create your first collection</string>
    <string name="action_generate">Generate collections and elements</string>
    <string name="generate_collection">Number of collections:</string>
    <string name="generate_elements">Number of elements:</string>
    <string name="generator">Generate!</string>
    <string name="name_too_short">Name is too short</string>
    <string name="element_localisation">Localisation:</string>
    <string name="add_image">Add image</string>
    <string name="app_id">1388908654663237</string>
    <string name="menu_share">Share on Facebook</string>
    <string name="incorrect_data">Incorrect data</string>
    <string name="action_synchronize">Synchronize</string>
    <string name="collection">Collection</string>
    <string name="friends">Friends</string>
    <string name="synchronize">Synchronize</string>
    <string name="profile">Profile</string>
    <string name="sign_up">Sign up</string>
    <string name="create_first_collection">Create first collection</string>
    <string name="sharing_succeeded">Sharing succeeded</string>
    <string name="progress">In progress…</string>
    <string name="element_category">Category:</string>
    <string name="no_internet_connection">YOU DON\'T HAVE INTERNET CONNECTION</string>
    <string name="Logged">Logged</string>
    <string name="email_or_password_incorrect">E-MAIL OR PASSWORD IS INCORRECT</string>
    <string name="password_pattern">.{4,}</string>
    <string name="invalid_mail">invalid email</string>
    <string name="invalid_password">invalid password</string>
    <string name="email_pattern">.+@.+\.[a-z]+</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="no_fragment">There is no active fragment</string>
    <string name="file_synchroniznig">File synchronizing …</string>
    <string name="publics">public</string>
    <string name="privates">private</string>
    <string name="post_on_wall">Post on wall</string>
    <string name="log_in_facebook">Log in Facebook</string>
    <string name="log_out_facebook">Log out Facebook</string>
    <string name="logout">Logout</string>
    <string name="continue_offline">Continue offline</string>
    <string name="my">my</string>
    <string name="Hoard">Hoard</string>
    <string name="name_with_space_at_end">Name can not end with a space</string>
    <string name="name_with_space_at_start">Name can not start with a space</string>    
    <string name="by_name">A-Z</string>
    <string name="by_date">DATE</string>
    <string name="please_sing_up">Don\'t have an account?\nPlease, sing up to public\n your collections.</string>
    <string name="have_account">Already have an account?</string>
    <string name="synchronization_not_implement">Synchronization is not implemented yet</string>
    <string name="serverJava2">http://78.133.154.39:2080/</string>
    <string name="serverJava1">http://78.133.154.39:1080/</string>
    <string name="python">http://78.133.154.18:8081/</string>
    <string name="search_hint">Enter search text</string>
    <string name="collection_added">Collection added successfully</string>
    <string name="delete_picker">Delete</string>
    <string name="not_implement_yet">Not implemented yet</string>
    <string name="Username">USERNAME(OPTIONAL)</string>
    <string name="Confirm_password">CONFIRM PASSWORD</string>
    <string name="password_not_match">Password doesn\'t match</string>
    <string name="password_strenght_text">Password Strength</string>
    <string name="google_maps_key">AIzaSyB6R1fTZEI3c1lDKV06SrSDPx2Fg70YQb4</string>
    <string name="no_photo">No photo</string>
    <string name="tag_exist">Tag %s already added</string>
    <string name="selected_items">Selected items: </string>
    <string name="empty_msg">Post cannot be empty</string>
    <string name="email_already_exists">EMAIL ALREADY EXISTS</string>
    <string name="gps_info_dialog_title">GPS is off</string>
    <string name="gps_info_dialog_message">Do you want to turn on the GPS?</string>
    <string name="gps_info_dialog_ok">Yes</string>
    <string name="gps_info_dialog_cancel">No</string>
    <string name="sharing_in_progress">Sharing in progress. Check out notification</string>
    <string name="please_wait">Please wait</string>
    <string name="preparing_data">Preparing data to send</string>
    <string name="take_a_photo">take a photo</string>
    <string name="choose_from_gallery">choose from gallery</string>
    <string name="add_element">Add element photo:</string>
    <string name="gps_finding_location">Finding location</string>
    <string name="gps_no_signal">No GPS signal</string>
    <string name="gps_no_location">No location</string>
    <string name="sent_photo">Sending a %1$d photo of the %2$d </string>
    <string name="remove_photo">remove photo</string>
    <string name="edit_element">Edit element photo:</string>
    <string name="choose_collection">Please, choose collection</string>
    <string name="location">Location: </string>
    <string name="another_share_is_running">Please wait, sharing is running</string>
    <string name="gps_enable">Enable GPS</string>
    <string name="location_manually">Choose position manually</string>
    <string name="choose_location">Please, choose location</string>
	<string name="required_photo">Share requires a photo</string>
    <string name="ip_filter_grayscale">Grayscale</string>
    <string name="ip_filter_blur">Blur</string>
    <string name="ip_filter_edge_detection">Edge detection</string>
    <string name="ip_filter_emboss">Emboss</string>
    <string name="ip_filter_none">None</string>
    <string name="ip_filter_negative">Negative</string>
    <string name="ip_filter_sharpen">Sharpen</string>
    <string name="ip_filter_sepia">Sepia</string>
    <string name="confirm_offline_type_text">Are you sure you want to change collection type to private?
        All data will be removed from server, but they will still remain locally on your phone.</string>

</resources>
