<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.myhoard.app.activities.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_collection"
        android:title="@string/action_new_collection"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="20"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_camera"
        android:title="@string/action_camera"
        android:icon="@drawable/ic_action_camera"
        android:orderInCategory="10"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_login"
        android:title="Login"
        android:icon="@drawable/ic_action_phone"
        android:orderInCategory="60"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="30"
        app:showAsAction="ifRoom|withText" />

</menu>
