<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/please_sing_up"
        android:textColor="@color/yellow_main"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_main"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/gray_background"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/gray_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/have_account"
        android:textColor="@color/yellow_main"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_main"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/Login"
        android:textColor="@color/gray_background"
        android:textSize="25sp" />


    <!--Rozciąga cały layout, bez tego jest wąski (nie rozumiem czemu)-->
    <View
        android:background="@color/gray_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/gray_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="No, thanks."
        android:textColor="@color/yellow_main"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bContinueOffline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_main"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/continue_offline"
        android:textColor="@color/gray_background"
        android:textSize="25sp" />

</LinearLayout>