<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_background"
        android:textColor="@color/yellow_main"
        android:text="@string/edit_element"
        android:padding="20dp"/>

    <RadioGroup
        android:id="@+id/rgImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:background="@color/gray_background"
            android:layout_width="fill_parent"
            android:layout_height="1dp"/>

        <RadioButton
            android:id="@+id/rbDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_photo"
            android:textColor="@color/black"
            android:button="@null"
            android:background="@color/yellow_main"
            android:drawableLeft="@drawable/ic_menu_delete_1"
            android:padding="10dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvCancelImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_background"
        android:textColor="@color/yellow_main"
        android:text="@string/cancel"
        android:padding="20dp"/>

</LinearLayout>